--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 fastapi[all]
-firebase-admin
-pandas
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
+fastapi
 uvicorn
-xgboost
-scikit-learn
+pandas
 numpy
 matplotlib
+scikit-learn
+xgboost
+joblib
+firebase-admin
+python-dotenv
